--- a/.github/workflows/ml_ci.yml
+++ b/.github/workflows/ml_ci.yml
@@ -25,34 +25,38 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 📂 Crear directorio mlruns y ajustar permisos
+      - name: 📦 Correr Mlflow localmente
         run: |
-          mkdir -p mlruns  # Crea la carpeta si no existe
-          chmod -R 777 mlruns  # Otorga permisos para evitar errores de acceso
+          mlflow ui --port 5000
 
-      - name: 🧪 Ejecutar flujo completo (EDA, limpieza, entrenamiento, validación)
-        run: make full
+      # - name: 📂 Crear directorio mlruns y ajustar permisos
+      #   run: |
+      #     mkdir -p mlruns  # Crea la carpeta si no existe
+      #     chmod -R 777 mlruns  # Otorga permisos para evitar errores de acceso
 
-      - name: 📤 Subir modelo .pkl como artefacto
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: mejor_modelo
-          path: models/mejor_modelo.pkl
+      # - name: 🧪 Ejecutar flujo completo (EDA, limpieza, entrenamiento, validación)
+      #   run: make full
 
-      # --- Subir cambios en mlruns al repositorio ---
-      - name: ⚙️ Configurar Git
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+      # - name: 📤 Subir modelo .pkl como artefacto
+      #   if: success()
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: mejor_modelo
+      #     path: models/mejor_modelo.pkl
 
-      - name: ✨ Añadir cambios en mlruns
-        run: git add mlruns
+      # # --- Subir cambios en mlruns al repositorio ---
+      # - name: ⚙️ Configurar Git
+      #   run: |
+      #     git config --global user.name 'github-actions[bot]'
+      #     git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: 📝 Confirmar cambios en mlruns (si existen)
-        run: |
-          git diff --staged --quiet || git commit -m "Actualizar mlruns con resultados de ejecución [skip ci]"
+      # - name: ✨ Añadir cambios en mlruns
+      #   run: git add mlruns
 
-      - name: 🚀 Empujar cambios a main
-        run: git push origin main
+      # - name: 📝 Confirmar cambios en mlruns (si existen)
+      #   run: |
+      #     git diff --staged --quiet || git commit -m "Actualizar mlruns con resultados de ejecución [skip ci]"
+
+      # - name: 🚀 Empujar cambios a main
+      #   run: git push origin main
 
