--- a/.github/workflows/ml_ci.yml
+++ b/.github/workflows/ml_ci.yml
@@ -60,3 +60,12 @@ jobs:
       - name: 🚀 Empujar cambios a main
         run: git push origin main
 
+      - name: Install Dependencies
+        run: |
+          pip install huggingface_hub
+
+      - name: Upload Model to Hugging Face
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          python upload_model.py
